<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location">

        <ListPreference
            android:icon="@drawable/ic_translate"
            app:defaultValue="sys"
            app:key="language"
            app:title="@string/changeLanguage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_headphones"
            android:summary="@string/audio_only_mode_summary"
            android:title="@string/audio_only_mode"
            app:key="audio_only_mode" />

        <ListPreference
            android:defaultValue="@string/config_default_orientation_pref"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values"
            android:icon="@drawable/ic_screen_rotation"
            app:key="orientation"
            app:title="@string/screen_orientation"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_suggestions"
            app:key="search_suggestions"
            app:title="@string/show_search_suggestions" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_list"
            app:key="related_streams_toggle"
            app:summary="@string/related_streams_summary"
            app:title="@string/related_streams" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/downloads">

        <ListPreference
            android:icon="@drawable/ic_open"
            android:key="external_download_provider"
            android:defaultValue="com.junkfood.seal"
            android:entries="@array/download_handoff_entries"
            android:entryValues="@array/download_handoff_values"
            android:summary="@string/download_handoff_summary"
            android:title="@string/download_handoff" />

        <!-- PrimeTube: SAF folder for "Save to storage (MP4)" downloads -->
        <Preference
            android:icon="@drawable/ic_download_folder"
            android:key="mp4_download_folder"
            android:summary="@string/mp4_download_folder_summary"
            android:title="@string/mp4_download_folder" />

        <Preference
            android:icon="@drawable/ic_open"
            android:key="open_seal"
            android:summary="@string/open_seal_summary"
            android:title="@string/open_seal" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_download_filled"
            app:key="automatic_update_checks"
            app:title="@string/show_updates"
            app:summary="@string/show_updates_summary" />

        <ListPreference
            android:defaultValue="disabled"
            android:entries="@array/dataSaverModeOptions"
            android:entryValues="@array/dataSaverModeValues"
            android:icon="@drawable/ic_data_saver"
            android:summary="@string/data_saver_mode_summary"
            app:key="data_saver_mode_key"
            app:title="@string/data_saver_mode" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_badge"
            android:summary="@string/new_videos_badge_summary"
            app:key="new_videos_badge"
            app:title="@string/new_videos_badge" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="reset_settings"
            app:title="@string/reset" />

    </PreferenceCategory>

</PreferenceScreen>