<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/startpage" />

    <item
        android:id="@+id/trendsFragment"
        android:icon="@drawable/ic_trending"
        android:title="@string/trends"
        android:visible="false" />

    <!-- PrimeTube: "Continue watching" replaces the subscriptions tab -->
    <item
        android:id="@+id/continueWatchingFragment"
        android:icon="@drawable/ic_restore"
        android:title="@string/continue_watching" />

    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_library"
        android:title="@string/library" />

    <item
        android:id="@+id/downloadsFragment"
        android:icon="@drawable/ic_download_filled"
        android:title="@string/downloads"
        android:visible="false" />

    <!-- PrimeTube: Live TV - IPTV playlist channels in a numbered grid (4th item) -->
    <item
        android:id="@+id/liveTVFragment"
        android:icon="@drawable/ic_nav_live"
        android:title="@string/prime_live_tv" />

</menu>