<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:focusableInTouchMode="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- PrimeTube: help and donate entries removed by request of the app owner -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <!-- PrimeTube: in-app updater - downloads the latest release APK and
         installs it over the running app -->
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_update"
        android:title="@string/prime_update"
        app:showAsAction="never" />

</menu>